[metadata]
name = gps_driver
version = 0.0.1

[options]
packages = find:
install_requires =
    pyserial
    utm
zip_safe = True

[options.entry_points]
console_scripts =
    gps_driver_node = gps_driver.driver:main

[data_files]
share/ament_index/resource_index/packages = resource/gps_driver
share/gps_driver = package.xml
# keep this if you have the file:
share/gps_driver/launch = launch/standalone_driver.launch.py
lib/gps_driver = scripts/gps_driver_node

